# WTW520241009

./: .replit  Pasted-Create-a-website-and-app-keep-the-app-as-the-last-stage-after-the-website-has-been-fully-completed--1727672005579.txt  app.py  create_admin.py  error.log.1  forms.py  models.py  package-lock.json  package.json  pyproject.toml  replit.nix  replit_zip_error_log (1).txt  replit_zip_error_log.txt  requirements.txt  routes.py  set_database_url.py  test.db  utils.py  views.py
.cache/nix/: binary-cache-v6.sqlite
.cache/pip/wheels/c2/f8/b8/1d1a02b6e208bbcd514d1083fde80669dd2ae803551a322b99/: SQLAlchemy-1.4.22-cp311-cp311-linux_x86_64.whl  origin.json
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.cache/typescript/5.5/: package-lock.json  package.json
.local/state/replit/agent/: repl_state.json
.upm/: store.json
migrations/: env.py
migrations/versions/: 56ebf16e02ce_add_end_time_to_game_model.py  706b19af7a62_add_has_started_column_to_game_model.py
static/css/: tailwind.css
static/js/: admin.js  countdown.js  create_game.js  game.js
templates/: base.html  index.html
templates/admin/: create_game.html  dashboard.html  game_stats.html  login.html  result.html
templates/game/: lobby.html  play.html  results.html
win-the-wallet-mobile/: App.js  config.js
win-the-wallet-mobile/screens/: GameLobbyScreen.js  HomeScreen.js  PlayGameScreen.js
