[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "flask-wtf>=1.2.1",
    "flask-socketio>=5.3.7",
    "werkzeug>=3.0.4",
    "wtforms>=3.1.2",
    "eventlet>=0.37.0",
    "flask-cors>=5.0.0",
    "flask-migrate>=4.0.7",
    "pytz>=2024.2",
    "sqlalchemy>=2.0.35",
]
